force-app/main/default/objects/Benefit_By_Year__c/Benefit_By_Year__c.object-meta.xml
<CustomObject>
    <label>Benefit By Year</label>
    <nameField>
        <displayFormat>BY-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit By Year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>