force-app/main/default/objects/Benefit_By_Year__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <label>Benefit</label>
    <referenceTo>Benefit__c</referenceTo>
    <relationshipLabel>Benefit By Year</relationshipLabel>
    <relationshipName>Benefit_By_Year</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>