force-app/main/default/objects/Benefit_By_Year__c/fields/Initiative_Id__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Id__c</fullName>
    <label>Initiative Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>